RHAIENG-581: filter out and remove from the release notes the automated PR titles generated by Konflux

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -12,5 +12,5 @@ changelog:
       # known bots
       - dependabot
       - ide-developer
-      - red-hat-konflux
+      - red-hat-konflux[bot]
       - codeflare-machine-account
