RHAIENG-581: filter out and remove from the release notes the automated PR titles generated by Konflux

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -9,8 +9,8 @@ changelog:
       # RHAIENG-581: bots and automation accounts (suppress noisy PRs)
       - app/red-hat-konflux
       - app/github-actions
-      # known bots
       - dependabot
       - ide-developer
+      # chore(deps): update konflux references by @red-hat-konflux[bot] in https://github.com/opendatahub-io/notebooks/pull/1974
       - red-hat-konflux[bot]
       - codeflare-machine-account
