NO-JIRA: sudo apt-get install -y --allow-downgrades "cri-o=${CRIO_VERSION}.*" (#2258)
```
+ sudo apt-get install -y 'cri-o=1.32.*' 'kubelet=1.33.*' 'kubeadm=1.33.*' 'kubectl=1.33.*' conntrack
Reading package lists...
Building dependency tree...
Reading state information...
The following additional packages will be installed:
  cri-tools kubernetes-cni
The following NEW packages will be installed:
  conntrack cri-o cri-tools kubeadm kubelet kubernetes-cni
The following packages will be DOWNGRADED:
  kubectl
E: Packages were downgraded and -y was used without --allow-downgrades.
0 upgraded, 6 newly installed, 1 downgraded, 0 to remove and 7 not upgraded.
Error: Process completed with exit code 100.
```

(cherry picked from commit 8e0d33f8764cf7ab8f72c43e8e05e4be53bf7e6e)

--- a/.github/workflows/build-notebooks-TEMPLATE.yaml
+++ b/.github/workflows/build-notebooks-TEMPLATE.yaml
@@ -361,9 +361,15 @@ jobs:
             sudo tee /etc/apt/sources.list.d/cri-o.list
 
           sudo apt-get update
+
           # [ERROR FileExisting-conntrack]: conntrack not found in system path
           # see man apt-patterns for the ~name=version* syntax
-          sudo apt-get install -y \
+
+          # The following packages will be DOWNGRADED:
+          #  kubectl
+          # E: Packages were downgraded and -y was used without --allow-downgrades.
+
+          sudo apt-get install -y --allow-downgrades \
             "cri-o=${CRIO_VERSION}.*" \
             "kubelet=${KUBERNETES_VERSION}.*" "kubeadm=${KUBERNETES_VERSION}.*" "kubectl=${KUBERNETES_VERSION}.*" \
             conntrack
