--- a/.tekton/odh-base-image-cuda-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-py312-c9s-push.yaml
@@ -26,6 +26,10 @@ spec:
     value: quay.io/opendatahub/odh-base-image-cuda-py312-c9s:{{revision}}
   - name: dockerfile
     value: base-images/cuda/12.6/c9s-python-3.12/Dockerfile.cuda
+  - name: build-platforms
+    value:
+    - linux/x86_64
+    - linux/arm64
   - name: path-context
     value: .
   - name: additional-tags
@@ -33,7 +37,7 @@ spec:
     - '{{target_branch}}-{{revision}}'
     - v12.6
   pipelineRef:
-    name: singlearch-push-pipeline
+    name: multiarch-pull-request-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cuda-py312-c9s-poc
   workspaces:
