--- a/.tekton/odh-base-image-cuda-py312-ubi9-pull-request.yaml
+++ b/.tekton/odh-base-image-cuda-py312-ubi9-pull-request.yaml
@@ -36,6 +36,7 @@ spec:
   - name: build-platforms
     value:
     - linux/x86_64
+    - linux/arm64
   - name: dockerfile
     value: base-images/cuda/12.6/ubi9-python-3.12/Dockerfile.cuda
   - name: path-context
