--- a/.tekton/odh-base-image-cuda-py312-c9s-push.yaml
+++ b/.tekton/odh-base-image-cuda-py312-c9s-push.yaml
@@ -37,7 +37,7 @@ spec:
     - '{{target_branch}}-{{revision}}'
     - v12.6
   pipelineRef:
-    name: multiarch-pull-request-pipeline
+    name: multiarch-push-pipeline
   taskRunTemplate:
     serviceAccountName: build-pipeline-odh-base-image-cuda-py312-c9s-poc
   workspaces:
