--- a/manifests/base/params-latest.env
+++ b/manifests/base/params-latest.env
@@ -22,6 +22,7 @@ odh-workbench-jupyter-pytorch-cuda-py312-ubi9-n=
 odh-workbench-jupyter-pytorch-llmcompressor-cuda-py312-ubi9-n=
 odh-workbench-jupyter-pytorch-rocm-py312-ubi9-n=
 odh-workbench-jupyter-tensorflow-cuda-py312-ubi9-n=
+odh-workbench-jupyter-tensorflow-rocm-py312-ubi9-n=
 odh-workbench-jupyter-trustyai-cpu-py312-ubi9-n=
 odh-workbench-codeserver-datascience-cpu-py312-ubi9-n=
 odh-pipeline-runtime-minimal-cpu-py312-ubi9-n=
@@ -29,4 +30,5 @@ odh-pipeline-runtime-datascience-cpu-py312-ubi9-n=
 odh-pipeline-runtime-pytorch-cuda-py312-ubi9-n=
 odh-pipeline-runtime-pytorch-rocm-py312-ubi9-n=
 odh-pipeline-runtime-tensorflow-cuda-py312-ubi9-n=
+odh-pipeline-runtime-tensorflow-rocm-py312-ubi9-n=
 odh-pipeline-runtime-pytorch-llmcompressor-cuda-py312-ubi9-n=
